tests/elab/ok/record_type/synth_record_type.pion
def Singleton = {x: Int};
def Point = {x: Int, y: Int};
def Any = {A: Type, a: A};
