tests/elab/errors/record_type/duplicate_fields.pion
def error = {x: Int, y: Bool, x: ()};
